[gd_scene load_steps=36 format=2]

[ext_resource path="res://Import/IMG_5508.PNG" type="Texture" id=1]
[ext_resource path="res://Import/IMG_5495.PNG" type="Texture" id=2]
[ext_resource path="res://Import/IMG_5494.PNG" type="Texture" id=3]
[ext_resource path="res://Import/IMG_5497.PNG" type="Texture" id=4]
[ext_resource path="res://Import/IMG_5496.PNG" type="Texture" id=5]
[ext_resource path="res://Import/IMG_5505.PNG" type="Texture" id=6]
[ext_resource path="res://Import/IMG_5504.PNG" type="Texture" id=7]
[ext_resource path="res://Script/Recruitment_Office.gd" type="Script" id=8]
[ext_resource path="res://Import/IMG_5363.PNG" type="Texture" id=9]
[ext_resource path="res://Import/IMG_5366.PNG" type="Texture" id=10]
[ext_resource path="res://Import/IMG_5507.PNG" type="Texture" id=11]
[ext_resource path="res://Import/IMG_5506.PNG" type="Texture" id=12]
[ext_resource path="res://Import/IMG_5522.PNG" type="Texture" id=13]
[ext_resource path="res://Import/IMG_5521.PNG" type="Texture" id=14]
[ext_resource path="res://Import/IMG_5520.PNG" type="Texture" id=15]
[ext_resource path="res://Import/IMG_5378.PNG" type="Texture" id=16]
[ext_resource path="res://Import/IMG_5379.PNG" type="Texture" id=17]
[ext_resource path="res://Import/IMG_5375.PNG" type="Texture" id=18]
[ext_resource path="res://Import/IMG_5535.PNG" type="Texture" id=19]
[ext_resource path="res://Import/IMG_5533.PNG" type="Texture" id=20]
[ext_resource path="res://Import/IMG_5534.PNG" type="Texture" id=21]
[ext_resource path="res://Import/IMG_5540.PNG" type="Texture" id=22]
[ext_resource path="res://Import/IMG_5541.PNG" type="Texture" id=23]
[ext_resource path="res://Import/IMG_5542.PNG" type="Texture" id=24]
[ext_resource path="res://Import/IMG_5554.PNG" type="Texture" id=25]
[ext_resource path="res://Import/IMG_5548.PNG" type="Texture" id=26]
[ext_resource path="res://Import/IMG_5547.PNG" type="Texture" id=27]
[ext_resource path="res://Import/IMG_5549.PNG" type="Texture" id=28]
[ext_resource path="res://Import/IMG_5555.PNG" type="Texture" id=29]
[ext_resource path="res://Import/IMG_5556.PNG" type="Texture" id=30]

[sub_resource type="Animation" id=1]
resource_name = "Box_Floating"
length = 8.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Box:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 140 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 260, 220 ), Vector2( 260, 360 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Buttons:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.935176, 0.931579 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 5.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Buttons:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Buttons:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Buttons:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 260, 220 ), Vector2( 220, 356 ) ]
}

[sub_resource type="Animation" id=3]
length = 120.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 120 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3040 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "Ventusr_Norm",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Brooke_Norm",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": true,
"name": "Tava_Norm",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "Yaooan_Norm",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 26 ) ],
"loop": true,
"name": "Guard_Norm",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 29 ) ],
"loop": true,
"name": "Queen_Norm",
"speed": 5.0
} ]

[node name="Recruitment_Office" type="Node2D"]
script = ExtResource( 8 )

[node name="Recruit_Image" type="Node2D" parent="."]

[node name="MainBG" type="Sprite" parent="Recruit_Image"]
texture = ExtResource( 1 )
centered = false

[node name="Shadow" type="Sprite" parent="Recruit_Image"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 17.9594, 0 )
texture = ExtResource( 4 )
centered = false

[node name="Img_Anima" type="AnimationPlayer" parent="Recruit_Image"]
autoplay = "Box_Floating"
anims/Box_Floating = SubResource( 1 )
anims/Open = SubResource( 2 )

[node name="Box" type="Node2D" parent="Recruit_Image"]

[node name="Box_Interior" type="Sprite" parent="Recruit_Image/Box"]
z_index = 1
texture = ExtResource( 2 )
centered = false

[node name="Box_Exterior" type="Sprite" parent="Recruit_Image/Box"]
z_index = 3
texture = ExtResource( 5 )
centered = false

[node name="Bubbles" type="Node2D" parent="Recruit_Image"]

[node name="Bubbles1" type="Sprite" parent="Recruit_Image/Bubbles"]
texture = ExtResource( 3 )
centered = false

[node name="Bubbles2" type="Sprite" parent="Recruit_Image/Bubbles"]
position = Vector2( 0, -1520 )
texture = ExtResource( 3 )
centered = false
flip_v = true

[node name="Bubbles3" type="Sprite" parent="Recruit_Image/Bubbles"]
position = Vector2( 0, -3040 )
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Recruit_Image/Bubbles"]
autoplay = "Bubble_Motion"
anims/Bubble_Motion = SubResource( 3 )

[node name="Red_Packet" type="AnimatedSprite" parent="Recruit_Image"]
visible = false
position = Vector2( 372, 676 )
scale = Vector2( 1.5, 1.5 )
z_index = 5
frames = SubResource( 4 )

[node name="Buttons" type="Sprite" parent="."]
position = Vector2( 260, 220 )
z_index = 1

[node name="Red_Envelope" type="TextureButton" parent="Buttons"]
margin_right = 205.0
margin_bottom = 431.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="."]
margin_left = 612.173
margin_top = 43.7266
margin_right = 684.173
margin_bottom = 111.727
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Charcters" type="Node2D" parent="."]
position = Vector2( 392.651, 992.955 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Charcters"]
visible = false
position = Vector2( -25, -23 )
scale = Vector2( 3, 3 )
z_index = 10
frames = SubResource( 5 )
animation = "Guard_Norm"
[connection signal="animation_finished" from="Recruit_Image/Img_Anima" to="." method="_on_Img_Anima_animation_finished"]
[connection signal="animation_finished" from="Recruit_Image/Red_Packet" to="." method="_on_Red_Packet_animation_finished"]
[connection signal="pressed" from="Buttons/Red_Envelope" to="." method="_on_Red_Envelope_pressed"]
[connection signal="pressed" from="OptionButton" to="." method="_on_OptionButton_pressed"]
